[package]
name = "electrsd"
version = "0.28.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
description = "Utility to run a regtest electrs process, useful in integration testing environment"
repository = "https://github.com/RCasatta/electrsd"
documentation = "https://docs.rs/elecrtsd/"
license = "MIT"
edition = "2018"
categories = ["cryptography::cryptocurrencies", "development-tools::testing"]

[dependencies]
bitcoind = { version = "0.36.0" }
electrum-client = { version = "0.21.0", default-features = false }
log = { version = "0.4" }
which = { version = "4.2.5" }

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.25.0" }

[dev-dependencies]
env_logger = { version = "0.10" }

[build-dependencies]
bitcoin_hashes = { version = "0.14", optional = true }
zip = { version = "0.6", default-features = false, optional = true, features = [
  "bzip2",
  "deflate",
] }
minreq = { version = "2.9.0", default-features = false, optional = true, features = [
  "https",
] }

[features]
legacy = []

# download is not supposed to be used directly only through selecting one of the version feature
download = ["bitcoin_hashes", "zip", "minreq"]

esplora_a33e97e1 = ["download"]
electrs_0_8_10 = ["download"]
electrs_0_9_1 = ["download"]
electrs_0_9_11 = ["download"]

bitcoind_25_0 = ["download", "bitcoind/25_0"]
bitcoind_24_0_1 = ["download", "bitcoind/24_0_1"]
bitcoind_23_1 = ["download", "bitcoind/23_1"]
bitcoind_22_1 = ["download", "bitcoind/22_1"]
bitcoind_0_21_2 = ["download", "bitcoind/0_21_2"]
bitcoind_0_20_2 = ["download", "bitcoind/0_20_2"]
bitcoind_0_19_1 = ["download", "bitcoind/0_19_1"]
bitcoind_0_18_1 = ["download", "bitcoind/0_18_1"]
bitcoind_0_17_1 = ["download", "bitcoind/0_17_1"]
